--- a/public/assets/css/plugin.css
+++ b/public/assets/css/plugin.css
@@ -3913,7 +3913,7 @@ Change the following styles to modify the appearance of the menu.
     left: 0;
     right: 0;
     background: #1F1D26;
-    height: 200px;
+    /* height: 200px; */
     overflow-y: scroll;
 }
 
